--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,25 +8,30 @@
   url = "#about"
   weight = 10
 
-[[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
+# [[main]]
+#   name = "Posts"
+#   url = "#posts"
+#   weight = 20
 
-[[main]]
-  name = "Projects"
-  url = "#projects"
-  weight = 30
+# [[main]]
+#   name = "Projects"
+#   url = "#projects"
+#   weight = 30
 
-[[main]]
-  name = "Talks"
-  url = "#talks"
-  weight = 40
+# [[main]]
+#   name = "Talks"
+#   url = "#talks"
+#   weight = 40
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "/publication"
   weight = 50
+
+[[main]]
+  name = "Service"
+  url = "/service"
+  weight = 55
 
 [[main]]
   name = "Contact"
